qgraphicsview handles the map and divisions

Using addPixmap to a QGraphicsView, just let the view handle the zoom,
moves.... Just handling all the view events to move the division
smoothly.

BUG: 285330
FIXED-IN: 4.12
REVIEW: 113425